hovering over the Bricolage ID in a desk view. [Paul Orrock]

=item *

The database upgrade script now updates table permissions after executing all
of the scripts for each version to be upgraded, rather than after all of the
upgrade scripts have run, thus allowing later scripts to properly access
tables created by earlier scripts. Reported by Nate Perry-Thistle. [David]

=back

=head2 Bug Fixes

=over

=item *

Fixed localization errors such as, "Can't use "for Published" as a method name
in bracket group," which appeared in searches and on desks. Thanks to Guido
Bülskämper for the spot! [David]

=item *

Fixed some of the 1.8.9 upgrade scripts that run I<after> the 1.9.x upgrade
scripts to that they are properly compatible. [Nate Perry-Thistle, Rod Taylor,
and David]

=item *

L<Bric::Biz::ElementType|Bric::Biz::ElementType> loads again. [Nate
Perry-Thistle]

=item *

The C<MEDIA_UNIQUE_FILENAME> F<bricolage.conf> directive is now fixed so that
the file name creation comes after the ID generation and therefore correctly
saves the renamed file. [Paul Orrock]

=item *

Fixes for UI display in Firefox and IE. Particularly Meta Assets displaying
down the page in IE, stretching out the banner in desks, corrected side menu
position in IE and removed reference to broken images left in from CSS
reworking. Also fixed textarea ignoring cols setting in IE. [Paul Orrock]

=item *

Fixed the history so that clicking the return button in the UI no longer goes
back to the preview page when the preview page was the last page accessed.
[Paul Orrock]

=item *

The XML generated when exporting element types via SOAP no longer includes
the C<top_level> element twice, thus avoiding mysterious "no sites defined"
errors when attempting to import or update element types from that XML.
Reported by Nate Perry-Thistle. [David]

=item *

Reverting stories and media no longer leads to occasional errors such as,
"Too many Bric::Biz::Element::Container objects found". Reported by Simon